Añadida una columna más en el listado de maquinas virtuales, cambio en la forma de ejecución de los scripts, corrección errores menores